added player total display

--- a/blackjack/src/BlackJack.css
+++ b/blackjack/src/BlackJack.css
@@ -1,10 +1,10 @@
 body {
-    background-color: darkgreen;
+    background-color: ForestGreen;
     margin: 0;
     height: 100%;
 }
 .cards{
-    background-color: darkgreen;
+    background-color: ForestGreen;
     margin: 0;
     height: 100%;
 }
