--- a/gui/src/components/Dashboard/Dashboard.css
+++ b/gui/src/components/Dashboard/Dashboard.css
@@ -13,7 +13,6 @@
 
 
 .slick-slider {
-    margin-top: 10vh;
     width: 90%;
     display: block;
     margin-left: auto;
@@ -32,7 +31,7 @@
 
 .slick-list {
     text-align: center;
-    height: 30vh;
+    height: 50vh;
     display: table-cell;
     background-color: rgba(0, 0, 0, 0.3);
 }
@@ -50,7 +49,7 @@
 }
 
 .slick-dots {
-    background-color: #fff;
+    background: transparent
 }
 
 .selected-item {
@@ -61,7 +60,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
 }
 
 .unselected-item {
