User Deletion works on Account with no matches, testing ones with matches now

--- a/gui/src/components/Dashboard/Dashboard.css
+++ b/gui/src/components/Dashboard/Dashboard.css
@@ -17,6 +17,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 3rem;
 }
 
 .slick-arrow {
@@ -60,7 +61,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 3rem; */
+    margin-top: 3rem;
 }
 
 .unselected-item {
